// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusLabel /> statuses renders bordered 1`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_notice-0-2-14"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 2`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_info-0-2-8"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 3`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_success-0-2-18"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 4`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_warning-0-2-20"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 5`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_danger-0-2-6"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 6`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_muted-0-2-12"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 7`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_luxury-0-2-10"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 8`] = `
<span
  className="label-0-2-1 label_bordered-0-2-3 label_plus-0-2-16"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 1`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_notice-0-2-15"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 2`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_info-0-2-9"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 3`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_success-0-2-19"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 4`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_warning-0-2-21"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 5`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_danger-0-2-7"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 6`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_muted-0-2-13"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 7`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_luxury-0-2-11"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 8`] = `
<span
  className="label-0-2-1 label_inverted-0-2-5 label_inverted_plus-0-2-17"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 1`] = `
<span
  className="label-0-2-1 label_notice-0-2-14"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 2`] = `
<span
  className="label-0-2-1 label_info-0-2-8"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 3`] = `
<span
  className="label-0-2-1 label_success-0-2-18"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 4`] = `
<span
  className="label-0-2-1 label_warning-0-2-20"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 5`] = `
<span
  className="label-0-2-1 label_danger-0-2-6"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 6`] = `
<span
  className="label-0-2-1 label_muted-0-2-12"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 7`] = `
<span
  className="label-0-2-1 label_luxury-0-2-10"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 8`] = `
<span
  className="label-0-2-1 label_plus-0-2-16"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 1`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_notice-0-2-14"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 2`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_info-0-2-8"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 3`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_success-0-2-18"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 4`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_warning-0-2-20"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 5`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_danger-0-2-6"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 6`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_muted-0-2-12"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 7`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_luxury-0-2-10"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 8`] = `
<span
  className="label-0-2-1 label_uppercased-0-2-2 label_plus-0-2-16"
>
  <span>
    plus
  </span>
</span>
`;
